syntax = "proto3";

package membership.v1;

message GetMembershipResponse {
  repeated TotalEnrollment by_year = 1;
}

message GetMembershipSummaryResponse {
  TotalEnrollment summary = 1;
}

message TotalEnrollment {
  string school_year = 1;
  int32 total_enrollment = 2;
  int32 male = 3;
  int32 female = 4;
  int32 native_american = 5;
  int32 asian = 6;
  int32 black = 7;
  int32 hispanic = 8;
  int32 pacific_islander = 9;
  int32 multiracial = 10;
  int32 white = 11;
  int32 grade_pk = 20;
  int32 grade_k = 21;
  int32 grade_01 = 22;
  int32 grade_02 = 23;
  int32 grade_03 = 24;
  int32 grade_04 = 25;
  int32 grade_05 = 26;
  int32 grade_06 = 27;
  int32 grade_07 = 28;
  int32 grade_08 = 29;
  int32 grade_09 = 30;
  int32 grade_10 = 31;
  int32 grade_11 = 32;
  int32 grade_12 = 33;
  int32 grade_13 = 34;
  int32 ungraded = 35;
  int32 adult_education = 36;
}

message GetMembershipRequest {
  string ncessch = 1;
}

message GetMembershipSummaryRequest {
  string ncessch = 1;
  string school_year = 2;
}

service MembershipService {
  rpc GetMembership(GetMembershipRequest) returns (GetMembershipResponse);
  rpc GetMembershipSummary(GetMembershipSummaryRequest) returns (GetMembershipSummaryResponse);
}
